fix the position of heading in the dark mode V1

--- a/style/sass/index.scss
+++ b/style/sass/index.scss
@@ -182,9 +182,8 @@ body {
     .container {
       h2 {
         position: relative;
+        font-size: 2.5rem;
         display: flex;
-        justify-content: center;
-        align-items: center;
         &:after {
           content: "Liam's Portfolio";
           position: absolute;
